# Personal-AI-Assistant

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  HANDOFF.md  README.md  VOS-050_v1_handoff.md  create-branch.py  plane_shield.py  setup_skills.py  vibeos.code-workspace
.agent/: performance_log.md
.obsidian/: graph.json  workspace.json
backend/: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: endpoints.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  chat.py  email.py  feeds.py  health.py  tasks.py
backend/app/services/: __init__.py  ai_service.py  campaign_service.py  cover_letter_generator.py  cv_service.py  email_service.py  feed_service.py  health_service.py  notification_service.py  rag_service.py  spotify_service.py  task_service.py
backend/app/services/scrapers/: adzuna.py  crustdata.py  cvlibrary.py  embedding_scorer.py  himalayas.py  jobicy.py  multi_source_scraper.py  proxycurl.py  reed.py  remoteok.py  remotive.py  scoring.py  serper.py  totaljobs.py  url_validator.py  weworkremotely.py
backend/app/utils/: __init__.py  auth.py  config.py
backend/scripts/: daily_health_analysis.py
backend/tests/: test_auth.py  test_chat_tools.py  test_email_service.py  test_embedding_scorer.py  test_feed_service.py  test_health.py  test_jobs_pipeline.py  test_tasks.py
docs/: AI_CAPABILITY_ENHANCEMENT_2026-03-19.md  API_Contract.md  AUDIT_MOBILE_PINK_2026-03-17.md  AUDIT_VOS_015_017_018_BLUE_2026-03-15.md  PRD.md  (+45 more)
(+423 files in other folders)
