[project]
name = "vibeos-backend"
version = "0.1.0"
description = "VibeOS Cloud Gateway Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.7",
    "supabase>=2.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
